--- a/sliding-puzzle.html
+++ b/sliding-puzzle.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,19 +14,21 @@
       </figure>
       <div id="ui">
         <p id="time">Current time: <span>00:00:00</span></p>
+        <div>
+          <label for="difficulty">Difficulty: (easy - medium - hard)</label>
+          <input type="range" name="difficulty" id="difficulty" min="1" max="3" />
+        </div>
         <button id="start">Start!</button>
       </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
       integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"
       integrity="sha256-sw0iNNXmOJbQhYFuC9OF2kOlD5KQKe1y5lfBn4C9Sjg="
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="js/sliding-puzzle.js"></script>
   </body>
 </html>
