--- a/sliding-puzzle.html
+++ b/sliding-puzzle.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
         <p id="time">Current time: <span>00:00:00</span></p>
         <div>
           <label for="difficulty">Difficulty: (easy - medium - hard)</label>
-          <input type="range" name="difficulty" id="difficulty" min="1" max="3" />
+          <input type="range" name="difficulty" id="difficulty" min="1" max="3" value="1" />
         </div>
         <button id="start">Start!</button>
       </div>
@@ -24,11 +24,13 @@
     <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
       integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"
       integrity="sha256-sw0iNNXmOJbQhYFuC9OF2kOlD5KQKe1y5lfBn4C9Sjg="
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <script src="js/sliding-puzzle.js"></script>
   </body>
 </html>
