--- a/sliding-puzzle.html
+++ b/sliding-puzzle.html
@@ -10,7 +10,7 @@
   <body>
     <div id="puzzle" class="clearfix">
       <figure>
-        <img src="img/Flower.png" />
+        <img src="img/Flower.jpg" />
       </figure>
       <div id="ui">
         <p id="time">Current time: <span>00:00:00</span></p>
